--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -20,6 +20,7 @@ col1 = rgb(0, 0.5, 1, alpha = 0.5)
 col2 = rgb(1, 0, 0, alpha = 0.5)
 col3 = rgb(0.5, 0.5, 1, alpha = 0.5)
 col4 = rgb(1, 0, 1, alpha = 0.5)
+all = FALSE
 ```
 
 This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The x-axis represents the time spent on the task, while the y-axis represents the memory used for the task.
@@ -35,7 +36,7 @@ This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The
 - **Date:** update 2024-02-29
 - **Version:** 
   - lidR 4.1.1
-  - lasR 0.2.0
+  - lasR 0.3.0
 
 ## Canopy Height Model
 
@@ -48,9 +49,18 @@ f = c("/home/jr/Documents/Ulaval/ALS data/BCTS/092L073113_BCTS_2.laz",
 
 read_benchmarks = function(pkg, test)
 {
-  list(
+  if (all)
+  {
+  x = list(
   read_benchmark(paste0(pkg, "_test_", test, "_jr-ThinkPad-T450s.data")),
   read_benchmark(paste0(pkg, "_test_", test, "_FFGG-1009803.data")))
+  }
+  else
+  {
+    x = list(read_benchmark(paste0(pkg, "_test_", test, "_FFGG-1009803.data")))
+  }
+  
+  return(x)
 }
 
 read_benchmark = function(file)
@@ -64,7 +74,10 @@ plot_benchmark = function(lidr, lasr)
   vlidr = "lidR 4.1.1"
   vlasr = paste("lasR", packageVersion("lasR"))
   
-  cpu_name = c("Intel Core i7-5600U", "Intel Core i7-1355U")
+  if (all)
+    cpu_name = c("Intel Core i7-5600U", "Intel Core i7-1355U")
+  else
+    cpu_name = c("Intel Core i7-1355U")
   
   mmax = 0
   tmax = 0
