--- a/vignettes/lasR2.Rmd
+++ b/vignettes/lasR2.Rmd
@@ -375,9 +375,22 @@ exec(pipeline, on = f)
 `callback()` exposes the point cloud as a `data.frame`. This is the only way to expose the point clouds to users in a manageable way. One of the reasons why `lasR` is more memory-efficient and faster than `lidR` is that it **does not** expose the point cloud as a `data.frame`. Thus, the pipelines using `callback()` are not significantly different from `lidR`. The advantage of using `lasR` here is the ability to pipe different stages.
 </blockquote>
 
+## Local maximum
+
+This stage works either on the point cloud or a raster. In the following pipeline the first stage builds a CHM, the second stage finds the local maxima in the point cloud and the second stages finds the local maxima in the chm. `lm1` and `lm2` are expected to produce relatively close results but not strictly identical.
+
+```r
+chm = rasterize(1, "max")
+lm1 = local_maximum(3)
+lm2 = local_maximum_raster(chm, 3)
+pipeline = chm + lm1 + lm2
+```
+
 ## Tree Segmentation
 
-This section presents a complex pipeline for tree segmentation using `local_maximum()` to identify tree tops, `region_growing()` to segment the trees using the seeds produced by `local_maximum()`, and a Canopy Height Model (CHM) produced using Delaunay triangulation of first returns. The CHM is post-processed with `pit_fill()`, an algorithm designed to enhance the CHM by filling pits and NAs. In this tutorial, the pipeline is tested on one file to render the page faster. However, this pipeline can be applied to any number of files and will produce a continuous output, managing the buffer between files. Every intermediate output can be exported, and in this tutorial, we export everything to display all the outputs.
+This section presents a complex pipeline for tree segmentation using `local_maximum_raster()` to identify tree tops on a CHM. It uses `region_growing()` to segment the trees using the seeds produced by `local_maximum_raster()`. The Canopy Height Model (CHM) is triangulation-based using `triangulation()` and `rasterize()` in the first returns. The CHM is post-processed with `pit_fill()`, an algorithm designed to enhance the CHM by filling pits and NAs. The reader may have noticed that the seeds are produced with the same raster than the one used in `region_growing()`. This is checked internally to ensure the seeds are matching the raster used for segmenting the trees. 
+
+In this tutorial, the pipeline is tested on one file to render the page faster. However, this pipeline can be applied to any number of files and will produce a continuous output, managing the buffer between files. Every intermediate output can be exported, and in this tutorial, we export everything to display all the outputs.
 
 ```{r, echo = FALSE}
 f <- system.file("extdata", "MixedConifer.las", package="lasR")
@@ -387,7 +400,7 @@ f <- system.file("extdata", "MixedConifer.las", package="lasR")
 del = triangulate(filter = keep_first())
 chm = rasterize(0.5, del)
 chm2 = pit_fill(chm)
-seed = local_maximum(3)
+seed = local_maximum_raster(chm2, 3)
 tree = region_growing(chm2, seed)
 pipeline = del + chm + chm2 +  seed + tree
 ans = exec(pipeline, on = f)
@@ -395,9 +408,10 @@ ans = exec(pipeline, on = f)
 
 ```{r, fig.show="hold", fig.width=4}
 col = grDevices::colorRampPalette(c("blue", "cyan2", "yellow", "red"))(25)
+col2 = grDevices::colorRampPalette(c("purple", "blue", "cyan2", "yellow", "red", "green"))(50)
 terra::plot(ans$rasterize, col = col, mar = c(1, 1, 1, 3))
 terra::plot(ans$pit_fill, col = col, mar = c(1, 1, 1, 3))
-terra::plot(ans$region_growing, col = col[sample.int(25, 297, TRUE)], mar = c(1, 1, 1, 3))
+terra::plot(ans$region_growing, col = col2[sample.int(50, 277, TRUE)], mar = c(1, 1, 1, 3))
 plot(ans$local_maximum$geom, add = T, pch = 19, cex = 0.5)
 ```
 
@@ -508,7 +522,6 @@ print(head(ans[[2]]))
 
 The following pipeline triangulates the ground points, normalizes the point cloud, and computes some metric of interest **for each file of the entire coverage**. Each file is loaded with a buffer so that triangulation is performed without edge artifacts. Notice the use of `drop_buffer = TRUE` to expose the `data.frame` without the buffer used to perform the triangulation and normalization.
 
-
 ```{r readers, eval = FALSE}
 my_metric_fun = function(data) { mean(data$Z) }
 tri <- triangulate(filter = keep_ground())
@@ -519,7 +532,6 @@ pipeline = norm + metric
 ```
 
 The following pipeline, on the contrary, works exactly the same but operates only on circular plots.
-
 
 ```{r, eval = FALSE}
 pipeline = reader_las_circles(xcenter, ycenter, 11.28) + pipeline
@@ -558,7 +570,6 @@ pipeline = read + trans + write1 + norm + write2
 
 Usually, `write_las()` is used with a wildcard in the `ofile` argument (see above) to write one file per processed file. Otherwise, everything is written into a single massive LAS file (which might be the desired behavior). On the contrary, `rasterize()` is used without a wildcard to write everything into a single raster file, but it also accepts a wildcard to write the results in multiple files, which is very useful with `reader_las_circles()` to avoid having one massive raster mostly empty. Compare this pipeline with and without the wildcard.
 
-
 ```{r, echo = FALSE}
 f = paste0(system.file(package="lasR"), "/extdata/bcts/")
 f = list.files(f, pattern = "(?i)\\.la(s|z)$", full.names = TRUE)
@@ -566,7 +577,6 @@ f = f[1:2]
 ```
 
 Without a wildcard, the output is a single raster that covers the entire point cloud with two patches of populated pixels.
-
 
 ```{r nowildcard, fig.height=4, fig.width=8, fig.show="hold"}
 ofile = paste0(tempdir(), "/chm.tif")   # no wildcard
@@ -581,7 +591,6 @@ terra::plot(r0, col = col) # covers the entire collection of files
 ```
 
 With a wildcard, the output contains two rasters that cover regions of interest.
-
 
 ```{r wildcard, fig.height=6, fig.show="hold", out.width="50%"}
 ofile = paste0(tempdir(), "/chm_*.tif") # wildcard
@@ -616,3 +625,7 @@ ans = exec(pipeline, on = las)
 ```
 
 In the case of a `LAScatalog`, `exec()` respects the processing options of the `LAScatalog` including the chunk size, chunk buffer, progress bar display and partial processing. In the general case, the same options can be supplied as arguments of the `exec()` functions.
+
+## Parallel processing
+
+The topic is covered in a [dedicated article](multithreading.html)
