--- a/vignettes/multithreading.Rmd
+++ b/vignettes/multithreading.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Multi-threading in the lasR package"
+title: "Parallel processing"
 author: "Jean-Romain Roussel"
 output:
   html_document:
@@ -60,7 +60,7 @@ Concurrent points is the default strategy. The LAS/LAZ files are processed seque
 set_parallel_strategy(conccurent_files(4))
 ```
 
-The LAS/LAZ files are processed in parallel. The point cloud from several files passes through several cloned pipelines while the other files are waiting. Inside the pipeline, the stages are not parallelized. This puts a lot of pressure on the disk because many LAS/LAZ files are read simultaneously, but also each stage can write some raster/vector/LAS files simultaneously. Additionally, it uses a lot of memory since many LAS files are loaded in memory simultaneously. With modern and fast SSD disks and a significant amount of RAM, this is the fastest option. Of course, users **should not** use all their cores; otherwise, they may run out of memory. See also the [benchmarks](../benchmarks.html) vignette.
+The LAS/LAZ files are processed in parallel. The point cloud from several files passes through several cloned pipelines while the other files are waiting. Inside the pipeline, the stages are not parallelized. This puts a lot of pressure on the disk because many LAS/LAZ files are read simultaneously, but also each stage can write some raster/vector/LAS files simultaneously. Additionally, it uses a lot of memory since many LAS files are loaded in memory simultaneously. With modern and fast SSD disks and a significant amount of RAM, this is the fastest option. Of course, users **should not** use all their cores; otherwise, they may run out of memory. See also the [benchmarks](benchmarks.html) vignette.
 
 ![](concurent_files.png){width=600px}
 
