--- a/vignettes/baba.Rmd
+++ b/vignettes/baba.Rmd
@@ -8,6 +8,10 @@ output:
       collapsed: false
       smooth_scroll: false
     toc_depth: 2
+vignette: >
+  %\VignetteIndexEntry{6. Buffered Area Based Approach}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
